# RabbitMQ

./: .gitignore  Commands.txt  Dockerfile  Dockerfile.fastapi  README.md  Receiver.py  Sender.py  docker-compose.yml  docker_compose.yml  get_elasticsearch.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_push_images.yml  deployment.yml  greetings.yml  pull.yml  pylint.yml  safety.yml  ssh_test.yml  test.yml  tests.yml
Calculator/: Dockerfile  Receiver.py
FastAPI/: Dockerfile  Sender.py
Tests/: test_sender.py
Unexpected handler/: Unexpected_Handler.py
calculator/: setup.py
calculator/calculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
calculator/operations/: __init__.py
calculator/tests/: test_divide.py  test_multiply.py  test_subtract.py  test_sum.py
